tests/bad/let_in2.nx
// o x dentro do let in tem de ser do tipo string

var x : int = 0;
let x = "oi" in print(x+1);